--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "mtp_erp",
+  "name": "node_slf",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
