--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "node_slf",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "dev": "node server.js",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "engines": {
     "node": "12.16.x"
